feat(common): 优化Netty原生传输支持与WebSocket推送增强
- Netty服务器引入NativeTransportDetector动态选择传输通道类型
- NettyEventLoopPool新增支持原生传输配置、日志及工厂方法改进
- 默认实时推送支持消息过滤、序列化压缩、链路追踪与审计日志
- 增加消息优先级推送、消息TTL支持及失败消息重试机制
- push接口扩展消息优先级参数，新增带TTL的用户推送方法
- 集群广播降级推送失败时支持本地推送和重试入队处理
- WebSocket推送流程调整，增强慢连接检测和指标统计
- Seata自动配置修复，完善分布式事务管理器注册逻辑
- TCC事务管理器改进，正确执行补偿逻辑和事务类型路由
- TccContext改进，避免数据快照遍历并发风险及解析异常处理
- RedisOfflineMessageStore添加调试日志补充
- SeataProperties增加多种事务相关配置参数，支持灵活调整